<!--
  ~ Copyright (c) 2018.
  ~ This file is part of Memorisia.
  ~
  ~ Memorisia is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Memorisia is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Memorisia.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name" translatable="false">Memorisia</string>
    <string name="app_desc">Memorise your things!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_navigation_views">Choose view</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_subject">Subject View</string>
    <string name="navigation_work_types">Work Types View</string>
    <string name="navigation_calendar">Calendar View</string>
    <string name="title_navigation_other">Other</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_about">About</string>

    <string name="home_title">Home</string>
    <string name="subjects_title">Subjects</string>
    <string name="work_types_title">Work Types</string>
    <string name="calendar_title">Calendar</string>
    <string name="settings_title">Settings</string>


    <string name="home_week">Due for the next 7 days</string>
    <string name="home_stars">5 Stars</string>

    <string name="name">Name</string>
    <string name="logo">Logo</string>
    <string name="color">Color</string>
    <string name="work_done">Work Done</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>

    <string name="action_add">Add</string>
    <string name="action_sort">Sort</string>
    <string name="action_agenda">Select Agenda</string>

    <string name="editing">Editing</string>
    <string name="create_subject">Create New Subject</string>
    <string name="create_work">Create New Work Type</string>
    <string name="create_agenda">Create New Agenda</string>

    <string name="empty_list">Nothing here!</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="sort_name">Sort by name</string>
    <string name="sort_percent">Sort by done percent</string>
    <string name="sort_total_work">Sort by total work</string>
    <string name="sort_priority">Sort by priority</string>
    <string name="sort_type">Sort by type</string>
    <string name="sort_date">Sort by date</string>

</resources>
