<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018.
  ~ This file is part of Memorisia.
  ~
  ~ Memorisia is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Memorisia is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Memorisia.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/title_navigation_views">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/navigation_home"/>
                <item
                    android:id="@+id/nav_subjects"
                    android:icon="@drawable/ic_subject_black_24dp"
                    android:title="@string/navigation_subject"/>
                <item
                    android:id="@+id/nav_work_types"
                    android:icon="@drawable/ic_work_black_24dp"
                    android:title="@string/navigation_work_types"/>
                <item
                    android:id="@+id/nav_calendar"
                    android:icon="@drawable/ic_date_range_black_24dp"
                    android:title="@string/navigation_calendar"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/title_navigation_other">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/navigation_settings"/>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_check_box_black_24dp"
                    android:title="@string/navigation_about"/>
            </group>
        </menu>
    </item>
</menu>
