<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clubinfo.insat.memorisia.EditOptionsActivity">

    <EditText
        android:id="@+id/moduleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textAlignment="center"
        android:layout_above="@+id/moduleLogo"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:id="@+id/moduleLogo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/ic_subject_black_24dp"/>

    <Button
        android:id="@+id/moduleColor"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_below="@+id/moduleLogo"
        android:layout_alignLeft="@+id/moduleLogo"
        android:layout_alignStart="@+id/moduleLogo"/>

    <Switch
        android:id="@+id/moduleNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:text="@string/notifications"/>

    <Button
        android:id="@+id/validateModule"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorYes"
        android:drawableLeft="@drawable/ic_done_black_24dp"
        android:onClick="onClickDone"
        android:text="@string/done"/>

    <Button
        android:id="@+id/deleteModule"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorNo"
        android:drawableRight="@drawable/ic_delete_forever_black_24dp"
        android:text="@string/delete"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/moduleName"
        android:layout_centerHorizontal="true"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/moduleColor"
        android:layout_alignLeft="@+id/moduleName"
        android:layout_alignStart="@+id/moduleName"
        android:layout_alignTop="@+id/moduleLogo"
        android:layout_toLeftOf="@+id/moduleColor"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/logo"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/moduleColor"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignTop="@+id/moduleColor"
        android:layout_toLeftOf="@+id/moduleColor"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/color"/>


</RelativeLayout>
